Bug 104937 - FILEOPEN: RTF: table's columns are narrower than they should be
Summary: FILEOPEN: RTF: table's columns are narrower than they should be
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0 target:5.4.2
Keywords: bibisected, bisected, filter:rtf, regression
: 106951 (view as bug list)
Depends on:
Blocks: RTF-Tables
  Show dependency treegraph
 
Reported: 2016-12-26 23:47 UTC by Xisco Faulí
Modified: 2017-10-05 22:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-12-26 23:47:21 UTC
Steps:
1. Open attachment 49249 [details] from bug 39337

Observed behaviour: Table's columns are narrower than they should be.

Reproduced in

Version: 5.4.0.0.alpha0+
Build ID: 7a1add76d542e9929c1feab9e06949990e236616
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2016-12-26 23:48:50 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2016-09-06 06:16:37 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2016-09-06 12:13:48 (GMT)
commit 0f2d5db38bac64b665c6e4a127bbbd63a7ed9af5 (patch)
tree cab1afbb409dfc73bf30d24ad087ba66e32c278b
parent cb970f2d3d4241ce209b84518ac798598fd0dc39 (diff)

tdf#44986 RTF import: handle \trwWidthA by faking cells
The DOCX import handles this at a tokenizer level, so let's do the same
in the RTF case as well.

Adding Cc: to Miklos Vajna
Comment 2 Xisco Faulí 2017-02-20 10:10:48 UTC
attachment 59203 [details] from bug 48037 is affected by the same commit, making the document to have 2 pages instead of one
Comment 3 Xisco Faulí 2017-02-20 12:18:27 UTC
attachment 59198 [details] from 48033 is affected too, making the table in the first page to be narrower.
Comment 4 Xisco Faulí 2017-04-04 14:55:49 UTC
*** Bug 106951 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2017-08-29 08:38:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6ec0794858df1444f43659b568119bf126a90e6

tdf#104937 RTF import: \trwWidthA is an absolute value

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-08-29 10:55:41 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b5d67cdd697c1b094b7e0622a2f4a06c3499f3d0&h=libreoffice-5-4

tdf#104937 RTF import: \trwWidthA is an absolute value

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2017-08-30 18:42:26 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 78960ad06faca055a6d97afbc764c902d5d07f6f
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-30_06:31:19
Locale: es-ES (es_ES); Calc: group