tdf#104937 RTF import: \trwWidthA is an absolute value

Not a relative one, so similar to \cellx need to convert these before
sending the value to dmapper (which expects an OOXML value, which is
always relative).

The result of the correct type is that the relative width of the last
cell in the table row is smaller, so other cells are wider -> they now
reach the expected width.

(cherry picked from commit e6ec0794858df1444f43659b568119bf126a90e6)

Change-Id: If282eb9a5ec644b38e552b5a66fc64a93538f216